<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/detail_product">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/detail_and_preview_background"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:fitsSystemWindows="true"
            tools:src="@tools:sample/backgrounds/scenic"
            android:background="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primary_blue"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                android:background="@color/white"

                android:id="@+id/Colapsetoolbar">

                <ImageView
                    android:id="@+id/ivBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/backgrounds/scenic"
                    android:layout_gravity="center|end"
                    app:layout_collapseMode="parallax"/>



                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>



            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_overlapTop="70dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/content"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="32dp" />


                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="2dp"
                    android:id="@+id/btn_product"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    tools:ignore="MissingConstraints">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:layout_margin="16dp">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/title_product"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/category"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/tv_title" />

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/rp_1_000_000"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:layout_constraintTop_toBottomOf="@id/tv_category" />
                        <ImageView
                            android:id="@+id/ivfav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:src="@drawable/ic_fav" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    app:cardElevation="2dp"
                    android:id="@+id/btn_profile"
                    android:backgroundTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/btn_product"
                    tools:ignore="MissingConstraints">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:layout_margin="16dp">
                        <ImageView
                            android:id="@+id/img_profile"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_broken"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="60dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/seller_name"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_profile" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="60dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/bandung"
                            android:textSize="14sp"
                            app:layout_constraintStart_toEndOf="@+id/img_profile"
                            app:layout_constraintTop_toBottomOf="@id/tv_name" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    app:cardElevation="2dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/btn_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_profile"
                    tools:ignore="MissingConstraints">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:layout_margin="16dp">

                        <TextView
                            android:id="@+id/tv_titleDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/deskripsi"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_Desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/lorem"
                            android:textSize="16sp"
                            app:layout_constraintTop_toBottomOf="@id/tv_titleDesc" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_back"
            android:padding="8dp"
            android:src="@drawable/ic_back" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinator3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tertarik"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/btn_tertarik"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/saya_tertarik_dan_ingin_nego"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"

        android:layout_height="match_parent">
        <ProgressBar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>