<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">
...
            android:layout_height="150dp"
            android:background="@drawable/home_gradient_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_fav"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintEnd_toStartOf="@id/et_search"
...
                    app:layout_constraintVertical_bias="0.19"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_product"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="24dp"
                    android:clipToPadding="false"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="2dp"
...
